--- a/html/base.html
+++ b/html/base.html
@@ -55,55 +55,54 @@
         </div>
       </nav>
     </header>
-    <main>
 
-      <!-- Slider main container -->
-      <div class="swiper">
-        <!-- Additional required wrapper -->
-        <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="../img/interior.jpg" alt></div>
-          <div class="swiper-slide"><img src="../img/restaurant.jpg" alt></div>
-          <div class="swiper-slide"><img src="../img/food.jpg" alt></div>
-          <div class="swiper-slide"><img src="../img/food2.jpg" alt></div>
-          <div class="swiper-slide"><img src="../img/food3.jpg" alt></div>
-        </div>
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-        <!-- If we need scrollbar -->
-        <div class="swiper-scrollbar"></div>
+    <!-- Slider main container -->
+    <div class="swiper">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="../img/interior.jpg" alt></div>
+        <div class="swiper-slide"><img src="../img/restaurant.jpg" alt></div>
+        <div class="swiper-slide"><img src="../img/food.jpg" alt></div>
+        <div class="swiper-slide"><img src="../img/food2.jpg" alt></div>
       </div>
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+      <!-- If we need scrollbar -->
+      <div class="swiper-scrollbar"></div>
+    </div>
 
+    <main>
       <!--アコーディオン-->
       <h1>新型コロナウイルスに対する取り組みの最新情報をご案内</h1><br>
       <div class="services">
         <h2 class="btn0">■衛生面に関して</h2>
         <ul class="btnx">
-          <li>マスクを着用しての接客</li><br>
-          <li>出勤前の検温の徹底</li><br>
-          <li>レジカウンターやドリンク受け渡し口等への飛沫防止ガードの設置</li><br>
-          <li>より頻度の高い手洗いの励行</li><br>
-          <li>テーブルにお客様用アルコールの設置</li><br>
-          <li>従業員間の距離確保のため、休憩や研修時の客席利用</li><br>
+          <li>・マスクを着用しての接客</li><br>
+          <li>・出勤前の検温の徹底</li><br>
+          <li>・レジカウンターやドリンク受け渡し口等への飛沫防止ガードの設置</li><br>
+          <li>・より頻度の高い手洗いの励行</li><br>
+          <li>・テーブルにお客様用アルコールの設置</li><br>
+          <li>・従業員間の距離確保のため、休憩や研修時の客席利用</li><br>
         </ul>
         <h2 class="btn1">■お客様へのご協力のお願い</h2>
         <ul class="btny">
-          <li>店内では、飲食時以外のマスク着用をお願いいたします</li><br>
-          <li>入店時の手指の消毒にご協力ください</li><br>
-          <li>レジに並ぶ際、目安を示すフロアステッカーに沿った列感覚の確保にご協力ください</li><br>
-          <li>多数でお越しの際は、お一人がまとめてご注文願います（混雑時に入場制限をする場合がございます）</li><br>
-          <li>発熱や体調不良の際はご入店をお控えください</li><br>
+          <li>・店内では、飲食時以外のマスク着用をお願いいたします</li><br>
+          <li>・入店時の手指の消毒にご協力ください</li><br>
+          <li>・レジに並ぶ際、目安を示すフロアステッカーに沿った列感覚の確保にご協力ください</li><br>
+          <li>・多数でお越しの際は、お一人がまとめてご注文願います（混雑時に入場制限をする場合がございます）</li><br>
+          <li>・発熱や体調不良の際はご入店をお控えください</li><br>
         </ul>
         <h2 class="btn2">■サービスに関して</h2>
         <ul class="btnz">
-          <li>直接お渡しする商品の提供、金銭授受時にグローブの着用</li><br>
-          <li>ドリンクやフードのサンプリング中止</li><br>
-          <li>地域活動・イベントの中止</li><br>
-          <li>混雑時間帯の客席への譲り合いへのご協力お願いの実施</li><br>
-          <li>店内設置しているミルク、はちみつ、パウダー類の一時引き下げ</li><br>
-          <li>混雑状況に応じたドライブスルーサービスの一時休止や店内客席利用の制限</li><br>
+          <li>・直接お渡しする商品の提供、金銭授受時にグローブの着用</li><br>
+          <li>・ドリンクやフードのサンプリング中止</li><br>
+          <li>・地域活動・イベントの中止</li><br>
+          <li>・混雑時間帯の客席への譲り合いへのご協力お願いの実施</li><br>
+          <li>・店内設置しているミルク、はちみつ、パウダー類の一時引き下げ</li><br>
+          <li>・混雑状況に応じたドライブスルーサービスの一時休止や店内客席利用の制限</li><br>
         </ul>
       </div>
       <!--紹介-->
